# 2024-spring-ab-python-ads-HW-7

./: DockerFile  Dockerfile  Makefile  Podmonitor.yaml  README.md  Requirements.txt  choose.py  eldon-deployment.yaml  inference.py  kind-cluster.yaml  model-settings.json  model_settings.json  podmonitor.yaml  prometheus.yaml  pyproject.toml  seldon-core-operator.yaml  seldon-deployment.yaml  seldondeployment.yaml  service.yaml  train.py
test/: test.py
