[tool.poetry]
name = "homework7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
scikit-uplift = "^0.5.1"
mlserver = "^1.5.0"
mlserver-sklearn = "^1.5.0"
joblib = "^1.3.2"
scikit-learn = "^1.4.1.post1"
catboost = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
